client/src/css/index.css
body {
	margin: 0;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
		"Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

code {
	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
}

#main-body,
#root,
#main-form {
	height: 100%;
}

.courseCardLabel {
	width: 10% !important;
}

.viewCourseButton,
.starsContainer,
.priceContainer,
.nextButton {
	margin-left: auto;
}

.courseCardTitle,
priceLabel {
	width: fit-content !important;
}

.success {
	color: #4bb543;
}

.error {
	color: #dc3545;
}
.video-responsive {
	overflow: hidden;
	padding-bottom: 56.25%;
	position: relative;
	height: 0;
}

.video-responsive iframe {
	left: 0;
	top: 0;
	height: 100%;
	width: 100%;
	position: absolute;
}
.navbarZ-index {
	z-index: 100000 !important;
	position: sticky !important;
	top: 0;
}

/* Scrollbar*/
/* width */
::-webkit-scrollbar {
	width: 8px;
}

/* Track */
::-webkit-scrollbar-track {
	/* box-shadow: inset 0 0 5px grey; */
	border-radius: 10px;
	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

/* Handle */
::-webkit-scrollbar-thumb {
	background-color: darkgrey;
	outline: 1px solid slategrey;
	/* background: red; */
	border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
	background-color: rgb(121, 119, 119);
}
/* Scrollbar End */

